syntax = "proto3";

option go_package = "github.com/badochov/distributed-shortest-path/src/services/worker/link/proto";

service Link {
  rpc Add(AddRequest) returns (AddResponse) {}
  rpc Init(InitRequest) returns (InitResponse) {}
  rpc Step(StepRequest) returns (StepResponse) {}
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

message AddResponse {
  int32 res = 1;
}

message InitRequest {
  uint32 minRegionId = 1;
  uint32 maxRegionId = 2;
  uint64 requestId = 3;
}

message InitResponse {}

message StepRequest {
  int64 vetrtexId = 1;
  double distance = 2;
  uint64 requestId = 3;
}

message StepResponse {
  int64 vetrtexId = 1;
  double distance = 2;
}
